unpackaged/main/default/objects/CV_Order_Add_Codes__mdt/fields/Account_Filter__c.field-meta.xml
<CustomField>
    <fullName>Account_Filter__c</fullName>
    <label>Account Filter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non Régleur</fullName>
                <default>true</default>
                <label>Non Régleur</label>
            </value>
            <value>
                <fullName>deposelabofalse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>