unpackaged/main/default/objects/CV_Order_Add_Codes__mdt/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <label>Activation Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>