unpackaged/main/default/objects/CV_Order_Add_Codes__mdt/fields/Only_If_Code_Present__c.field-meta.xml
<CustomField>
    <fullName>Only_If_Code_Present__c</fullName>
    <label>Only If Code Present</label>
    <length>50</length>
    <type>Text</type>
</CustomField>