unpackaged/main/default/objects/CV_Order_Add_Codes__mdt/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product Code</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>